# pride

./: .astyle  .clang-format  .editorconfig  .gitignore  .travis.yml  CMakeLists.txt  appveryor.yml  appveyor.yml  readme.md
benchmarks/: CMakeLists.txt  colors.cpp  guid.cpp  hash.cpp
cmake/: clone.cmake  common.cmake
pride/: CMakeLists.txt  assert.hpp  cli.hpp  cmd.hpp  config.hpp  console.hpp  ct.hpp  explicit.hpp  hash.hpp  log.hpp  memory.hpp  numeric.hpp  path.hpp  preprocessor.hpp  pride.hpp  types.hpp  utility.hpp
pride/assert/: assert.hpp  expression.hpp  macro.hpp  stringify.hpp  violation.hpp
pride/cli/: cli.hpp
pride/cli/clipp/: clipp.hpp  update-clipp
pride/cmd/: cmd.hpp  exception.hpp  option.hpp  value.hpp
pride/config/: api.hpp  detection.hpp
pride/config/detection/: arch.hpp  compiler.hpp  cxx.hpp  debug.hpp  endian.hpp  os.hpp  rtti.hpp  stdlib.hpp
pride/config/include/: windows.hpp
pride/console/: color.hpp  terminal.hpp
pride/ct/: all_of.hpp  containers.hpp  cstring.hpp  hash.hpp  list.hpp  map.hpp  meta.hpp  pair.hpp  static_value.hpp  string.hpp  type.hpp
pride/ct/details/: algorithm.hpp
pride/ct/hash/: crc.hpp  djb2a.hpp  fnv1a.hpp  hash.hpp  murmur.hpp  phf.hpp  xxhash.hpp
pride/ct/internal/: algorithm.hpp
pride/ct/type/: type_id.hpp  type_tag.hpp
pride/ct/type/details/: nameof.hpp  pretty_function.hpp
pride/explicit/: not_null.hpp  only_when.hpp  out_param.hpp  tagged_bool.hpp
pride/hash/: crc.hpp  fasthash.hpp  fnv1a.hpp  hash.hpp  mm3.hpp  xxhash.hpp
pride/log/: channel.hpp  channels.hpp  fmt.hpp  formatter.hpp  logger.hpp  message.hpp  sevarity.hpp
pride/log/channels/: console.hpp  file.hpp  msvc.hpp  ostream.hpp  syslog.hpp
pride/log/detail/: null.hpp  thread.hpp  time.hpp
pride/log/fmt/: fmt.hpp  update-fmt
pride/log/fmt/bundle/: core.h  folly.h  format-inl.h  format.h  ostream.h  posix.h  printf.h  ranges.h  time.h
pride/log/internal/: null.hpp  thread.hpp  time.hpp
pride/memory/: pool.hpp
pride/numeric/: uint128.hpp  uint128_t.hpp  uint256.hpp  uint256_t.hpp
pride/os/: file.hpp
pride/path/: path.hpp
pride/preprocessor/: function.hpp  logic.hpp  utils.hpp
pride/utility/: action.hpp  big_int.hpp  guid.hpp  likely.hpp  scope_guard.hpp  shareable.hpp  singleton.hpp
samples/: CMakeLists.txt
samples/01-console-colors/: 01-console-colors.cpp
samples/02-compile-time/: main.cpp
samples/02-sample/: 02-sample.cpp
samples/03-hash/: main.cpp
samples/04-logging/: main.cpp
tests/: CMakeLists.txt  test.cpp  test.hpp
tests/assert/: expression.cpp
tests/cmd/: value.cpp
tests/numeric/: uint128.cpp  uint256.cpp
tests/utility/: scope_guard.cpp
